Change to blind auction and disable some endpoints
Internal changes to the auction have necessitated some changes.
You can now get anonymous bid statistics and logging has been
vastly improved.
