# swagger.yml
@@ -7,11 +7,35 @@ info:
   description: REST API for taking and managing bids for an auction
   title: Auction API
   version: 1.0.0
+host: localhost:61125
 basePath: /api/v1
 schemes:
   - http
 
 paths:
+  /statistics/{item_number}:
+    get:
+      operationId: getBidStats
+      tags:
+        - Statistics
+      parameters:
+        - name: item_number
+          in: path
+          required: true
+          type: integer
+          minimum: 1
+          description: Item number to get statistics for
+      responses:
+        200:
+          description: OK get stats for item
+          schema:
+            type: object
+            $ref: "#/definitions/Statistics"
+        401:
+          description: Endpoint currently disabled
+          schema:
+            type: object
+            $ref: "#/definitions/ErrorResponse"
   /bids:
     get:
       operationId: getAllBids
@@ -24,6 +48,11 @@ paths:
             type: array
             items:
               $ref: "#/definitions/ItemSummary"
+        401:
+          description: Endpoint currently disabled
+          schema:
+            type: object
+            $ref: "#/definitions/ErrorResponse"
   /bids/{item_number}:
     get:
       operationId: getAllBidsForItem
@@ -33,7 +62,7 @@ paths:
         - name: item_number
           in: path
           required: true
-          type: number
+          type: integer
           minimum: 1
           description: Item number to bid on
       responses:
@@ -42,6 +71,11 @@ paths:
           schema:
             type: object
             $ref: "#/definitions/ItemSummary"
+        401:
+          description: Endpoint currently disabled
+          schema:
+            type: object
+            $ref: "#/definitions/ErrorResponse"
     post:
       operationId: makeBid
       tags:
@@ -50,7 +84,7 @@ paths:
         - name: item_number
           in: path
           required: true
-          type: number
+          type: integer
           minimum: 1
           description: Item number to bid on
         - name: bid
@@ -67,8 +101,22 @@ paths:
           description: Bad format
         403:
           description: Bid disallowed
+        401:
+          description: Endpoint currently disabled
+          schema:
+            type: object
+            $ref: "#/definitions/ErrorResponse"
 
 definitions:
+  Statistics:
+    type: object
+    required:
+      - no_of_bids
+    properties:
+      no_of_bids:
+        x-nullable: false
+        type: integer
+        example: 3
   Bid:
     type: object
     required:
@@ -77,7 +125,7 @@ definitions:
       - bidder_email
     properties:
       item_number:
-        type: number
+        type: integer
         readOnly: true
         example: 15
       bid_amount:
@@ -94,3 +142,8 @@ definitions:
     type: array
     items:
       $ref: "#/definitions/Bid"
+  ErrorResponse:
+    type: object
+    properties:
+      error_message:
+        type: string
